[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/wave_type5.gd" type="Script" id=1]
[ext_resource path="res://Textures/cookipack.png" type="Texture" id=2]
[ext_resource path="res://SFX/Explosion.wav" type="AudioStream" id=3]
[ext_resource path="res://SFX/Hit_Hurt.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 27, 26 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 0, -9 )
b = Vector2( 0, 10 )

[node name="wave" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="checker" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="cr" type="CollisionShape2D" parent="checker" index="0"]

position = Vector2( 35, 0 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="cl" type="CollisionShape2D" parent="checker" index="1"]

position = Vector2( -35, 0 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="snd_destruido" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Explosoes"
area_mask = 1

[node name="snd_hit" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Hit"
area_mask = 1

[node name="Timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_entered" from="checker" to="." method="_on_checker_body_entered"]


